manifests/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
