manifests/route-docker.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nexus-docker
  namespace: nexus
spec:
  to:
    kind: Service
    name: nexusrepo-sonatype-docker-service
    weight: 100
  port:
    targetPort: docker
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
