manifests/route-ui.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nexus-ui
  namespace: nexus
spec:
  to:
    kind: Service
    name: nexusrepo-sonatype-nexus-service
    weight: 100
  port:
    targetPort: application
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
